signup validation completed

--- a/views/userView/signup.hbs
+++ b/views/userView/signup.hbs
@@ -10,7 +10,7 @@
             <h3 class="mb-5">create an Account</h3>
 
             <div class="form-outline mb-4">
-              <p></p>
+              <p style="color:red ;">{{error}}</p>
               <input type="text" name="username" id="typeUsernameX-2" class="form-control form-control-lg" />
               <label class="form-label pt-4" for="typeUsernameX-2">Username</label>
             </div>
