--- a/views/adminView/adminDash.hbs
+++ b/views/adminView/adminDash.hbs
@@ -1,35 +1,35 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Admin</a>
+    <a class="navbar-brand" href="#">Admin DashBoard</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <button class="btn btn-primary btn-block" type="submit">Login</button>
+          {{!-- <button class="btn btn-primary btn-block" type="submit">Login</button> --}}
         </li>
         <li class="nav-item">
-<button class="btn btn-primary  btn-block" type="submit">Log Out</button>
+<a  class="btn btn-primary" href="/admin/logout">Log Out</a>
         </li>
 
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
       </ul>
     </div>
   </div>
 </nav>
+<a href="/admin/addUser" class="btn btn-primary" >Add User</a>
+
+
 <section>
   <div class="container">
     <div class="row">
-      <table class="table">
+      <table class="table" id="UserTable">
   <thead>
     <tr>
 
       <th scope="col">UserName</th>
       <th scope="col">Email</th>
-      <th scope="col"></th>
+      <th scope="col">Options</th>
     </tr>
   </thead>
   <tbody>
@@ -51,3 +51,16 @@
 
 
 </section>
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.13.1/js/dataTables.bootstrap4.min.js"></script>
+
+
+<script>
+
+  $(document).ready( function () {
+    $('#UserTable').DataTable();
+} );
+</script>
