--- a/views/adminView/adminLogin.hbs
+++ b/views/adminView/adminLogin.hbs
@@ -33,7 +33,7 @@
 
             {{!-- <button class="btn btn-lg btn-block btn-primary" style="background-color: #dd4b39;" type="submit"><i
                 class="fab fa-google me-2"></i> Sign up ?</button> --}}
-            <a class="btn btn-lg btn-block btn-success fab fa-google me-2" href="/signup">Create an account?</a>
+            <a class="btn btn-lg btn-block btn-success " href="/">User Login?</a>
             {{!-- <a class="btn btn-primary" href="/logout">Log out</a> --}}
           </div>
         </div>
