--- a/views/userView/home.hbs
+++ b/views/userView/home.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">User</a>
+    <a class="navbar-brand" href="#">Welcome {{username}} !!! </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -10,6 +10,8 @@
           {{!-- <button class="btn btn-primary btn-block" type="submit">Login</button> --}}
         </li>
         <li class="nav-item">
+
+          
 <a  class="btn btn-primary" href="/logout">Log Out</a>
         </li>
 
@@ -17,3 +19,16 @@
     </div>
   </div>
 </nav>
+
+<section>
+<div class="container">
+  <div class="row">
+    <div class="user-home ">
+ <h2>{{username}} Have a nice Day !!</h2>
+    <a  class="btn btn-primary" href="/logout">Log Out</a>
+    <a  class="btn btn-primary" href="/accounts">Accounts</a>
+    </div>
+   
+  </div>
+</div>
+</section>
