--- a/views/userView/login.hbs
+++ b/views/userView/login.hbs
@@ -9,20 +9,20 @@
               <h3 class="mb-5">Sign in</h3>
               <p style="color:red ;"></p>
              <div class="form-outline mb-4">
-              {{!-- {{#if error}}
+              {{#if error}}
 
               <p style="color: red;">{{error}}</p>
-              {{/if}} --}}
-              {{#if error}}
-              <span  style="color: red ;"id="username-error"></span>
               {{/if}}
+
+              <span  style="color: red ;"id="username-error"></span>
+
               <input type="text" name="username" id="v-username" oninput="validateName()" class="form-control form-control-lg" placeholder="Enter Username" />
               <label class="form-label pt-4" for="typeUsernameX-2">Username</label>
             </div>
 
               <div class="form-outline mb-4 p-4">
-                <span id="password-error"></span>
-                <input type="password"id="v-password" oninput="validatePasssword()"  name="password"  class="form-control form-control-lg" placeholder="Enter Password" />
+                <span style="color: red ;" id="password-error"></span>
+                <input type="password"id="v-password" oninput="validatePassword()"  name="password"  class="form-control form-control-lg" placeholder="Enter Password" />
                 <label class="form-label pt-4" for="typePasswordX-2">Password</label>
               </div>
 
@@ -47,6 +47,34 @@
       </div>
     </div>
   </div>
+  <script>
+    let usernameError=document.getElementById('username-error');
+let passwordError=document.getElementById('password-error')
 
-  <script src="../public/javascripts/validation.js"></script>
+
+function validateName(){
+    let username= document.getElementById('v-username').value
+
+    if(username.length==0){
+        usernameError.innerHTML='Username Required';
+        return false
+    }
+    nameError.innerHTML =' ';
+    return true;
+}
+
+function validatePassword(){
+    let password=document.getElementById('v-password').value
+
+    if(password.length==0){
+        passwordError.innerHTML='password Required'
+        return false
+    }
+    passwordError.innerHTML=' ';
+    return true;
+}
+
+  </script>
+
+  {{!-- <script src="../public/javascripts/validation.js"></script> --}}
 </section>
