--- a/views/adminView/addUser.hbs
+++ b/views/adminView/addUser.hbs
@@ -1,4 +1,4 @@
-<section class="vh-100" style="background-color: #508bfc;">
+<section class="vh-100" style="background-color: #FF6A2A;">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
@@ -25,20 +25,13 @@
               <label class="form-label pt-4" for="typePasswordX-2">Password</label>
             </div>
 
-            {{!-- <!-- Checkbox -->
-            <div class="form-check d-flex justify-content-start mb-4">
-              <input class="form-check-input" type="checkbox" value="" id="form1Example3" />
-              <label class="form-check-label" for="form1Example3"> Remember password </label>
-            </div> --}}
+            
 
             <button class="btn btn-primary btn-lg btn-block " type="submit" >Sign Up</button>
             </form>
 
             <hr class="my-4">
 
-            {{!-- <button class="btn btn-lg btn-block btn-primary" style="background-color: #dd4b39;"
-              type="submit"><i class="fab fa-google me-2"></i> log in?</button> --}}
-            
                         <a class="btn btn-lg btn-block btn-danger fab fa-google me-2" href="/">Already have an account?</a>
 
 
