--- a/views/adminView/adminDash.hbs
+++ b/views/adminView/adminDash.hbs
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          {{!-- <button class="btn btn-primary btn-block" type="submit">Login</button> --}}
+
         </li>
         <li class="nav-item">
 <a  class="btn btn-primary" href="/admin/logout">Log Out</a>
@@ -17,7 +17,7 @@
     </div>
   </div>
 </nav>
-<a href="/admin/addUser" class="btn btn-primary" >Add User</a>
+<a  href="/admin/addUser" class="add-user btn btn-primary " >Add User</a>
 
 
 <section>
@@ -35,7 +35,7 @@
   <tbody>
         {{#each users}}
     <tr>
-      {{!-- <th scope="row">1</th> --}}
+
       <td>{{this.username}}</td>
       <td>{{this.email}}</td>
       <td>
