--- a/views/adminView/adminLogin.hbs
+++ b/views/adminView/adminLogin.hbs
@@ -10,34 +10,55 @@
               <p style="color:red ;"></p>
              <div class="form-outline mb-4">
               <p style="color: red;">{{error}}</p>
-              <input type="text" name="adminId" id="typeUsernameX-2" class="form-control form-control-lg" />
+
+              <span  style="color: red ;"id="admin-error"></span>
+              <input type="text" name="adminId" id="v-adminId" oninput="validateName()" class="form-control form-control-lg" />
               <label class="form-label pt-4" for="typeUsernameX-2">Username</label>
             </div>
 
               <div class="form-outline mb-4 p-4">
-                <input type="password" name="password" id="typePasswordX-2" class="form-control form-control-lg" />
+                <input type="password" name="password" id="password-error" oninput="validatePassword()" class="form-control form-control-lg" />
                 <label class="form-label pt-4" for="typePasswordX-2">Password</label>
               </div>
 
-              {{!--
-              <!-- Checkbox -->
-              <div class="form-check d-flex justify-content-start mb-4">
-                <input class="form-check-input" type="checkbox" value="" id="form1Example3" />
-                <label class="form-check-label" for="form1Example3"> Remember password </label>
-              </div> --}}
 
               <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
             </form>
 
             <hr class="my-4">
-
-            {{!-- <button class="btn btn-lg btn-block btn-primary" style="background-color: #dd4b39;" type="submit"><i
-                class="fab fa-google me-2"></i> Sign up ?</button> --}}
             <a class="btn btn-lg btn-block btn-success " href="/">User Login?</a>
-            {{!-- <a class="btn btn-primary" href="/logout">Log out</a> --}}
+
           </div>
         </div>
       </div>
     </div>
   </div>
+  <script>
+     let adminError=document.getElementById('admin-error');
+let passwordError=document.getElementById('password-error')
+
+function validateName{
+    let admin= document.getElementById('v-adminId').value
+
+    if(username.length==0){
+        adminError.innerHTML='adminId Required';
+        return false
+    }
+    nameError.innerHTML =' ';
+    return true;
+}
+
+function validatePassword(){
+    let password=document.getElementById('v-password').value
+
+    if(password.length==0){
+        passwordError.innerHTML='password Required'
+        return false
+    }
+    passwordError.innerHTML=' ';
+    return true;
+}
+
+
+  </script>
 </section>
