--- a/views/userView/login.hbs
+++ b/views/userView/login.hbs
@@ -26,22 +26,17 @@
                 <label class="form-label pt-4" for="typePasswordX-2">Password</label>
               </div>
 
-              {{!--
-              <!-- Checkbox -->
-              <div class="form-check d-flex justify-content-start mb-4">
-                <input class="form-check-input" type="checkbox" value="" id="form1Example3" />
-                <label class="form-check-label" for="form1Example3"> Remember password </label>
-              </div> --}}
 
               <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
             </form>
 
             <hr class="my-4">
 
-            {{!-- <button class="btn btn-lg btn-block btn-primary" style="background-color: #dd4b39;" type="submit"><i
-                class="fab fa-google me-2"></i> Sign up ?</button> --}}
-            <a class="btn btn-lg btn-block btn-success fab fa-google me-2" href="/signup">Create an account?</a>
-            {{!-- <a class="btn btn-primary" href="/logout">Log out</a> --}}
+          
+            <a class="btn btn-lg btn-block btn-success " href="/signup">Create an account?</a>
+            <br>
+            <a class="  " href="/admin">admin login?</a>
+
           </div>
         </div>
       </div>
@@ -76,5 +71,5 @@ function validatePassword(){
 
   </script>
 
-  {{!-- <script src="../public/javascripts/validation.js"></script> --}}
+
 </section>
